# WaveFunctionCollapse

./: .gitignore  CMakeLists.txt  README.md  sudoku_cpu.c  wfc.c
data/: grid-3x3.data  grid-5x5.data  grid-8x8.data  simple-5x5.data
inc/: args.h  bitfield.h  helper_cuda.h  md5.h  position_list.h  types.h  wfc.h  wfc_cuda.h  wfc_omp.h
output/: simple-5x5.4.save
src/: args.c  bitfield.c  cuda_main.cu  load_save.c  main.c  md5.c  md5.cu  wfc.c  wfc_omp.c
src/solvers/: sudoku_cpu.c  sudoku_cuda.cu  sudoku_cuda2.cu  sudoku_omp.c  sudoku_target.c  sudoku_target.cZone.Identifier
